--- a/booknotes.tex
+++ b/booknotes.tex
@@ -3,9 +3,11 @@
 % \usepackage[bookmarks]{hyperref}
 \begin{document}
 \title{Book Notes}
+\author{ahmet}
 \maketitle
 \tableofcontents
 \newpage
-\input{cuckoosegg/cuckoosegg.tex}
 \input{innovators/innovators.tex}
+%\input{cuckoosegg/cuckoosegg.tex}
+%\newpage
 \end{document}
