--- a/innovators/innovators.tex
+++ b/innovators/innovators.tex
@@ -1,6 +1,103 @@
 \chapter{Innovators}
 \label{chp:b2}
 
+Written by Walter Isaacson.
+
 \section{Intro}
 
-It is a novel written by Walter Isaacson.
+In the mid-nineteenth century, Thomas Carlyle declared that ``the history of the
+world is but the biography of great men'', and Herbert Spencer responded with a
+theory that emphasized the role of societel forces. When it comes to digital-age
+innovation, a variety of personal and cultural forces come into play.
+
+The truest creativity of the digital age came from those who were able to
+connect the arts and sciences. They believed that beauty mattered. ``I always
+thought of myself as a humanities person as a kid, but I liked electronics.''
+Jobs told.
+
+The people who were comfortable at this humanities-technology intersection
+helped to create the human machine symbiosis that is at the core of this
+history.
+
+\section{Foundations}
+
+\subsection{Ada Lovelace (1815-1852)}
+
+Ada realized that math was a lovely language, one that describes the harmonies
+of the universe and can be poetic at times. She remained her father's daughter,
+with a poetic sensibility that allowed her to view an equation as a brushstroke
+that painted an aspect of nature's physical splendor.
+
+Ada asked in 1842 essay ``What is imagination? It is the Combining faculty. It
+brings together things, facts, ideas, conceptions, in new, original, endless,
+ever-varying combinations\ldots It is that which penetrates into the unseen
+worlds around us, the worlds of Science.''
+
+\subsection{Charles Babbage (1791-1871)}
+
+In the 1640s, Blaise Pascal, the French mathematician and philosopher, cretaed a
+mechanical calculator to reduce the drudgery of his father's work as a tax
+supervisor.
+
+Thirty years later, Gottfriend Liebniz, the German mathematician and
+philosopher,tried to improve upon Pascal's contraption with a `stepped reckoner'
+that had the capacity to multiply and divide. But he ran into a problem that
+would be recurring theme of the digital age. Unlike Pascal, an adroit engineer
+who could combine scientific theories with mechanical genius, Leibniz had little
+engineering skill and did not surround himself with those who did. So, like many
+great theorists who lacked practical collaborators, he was unable to produce
+reliably working versions of his device.
+
+Babbage knew of the devices of Pascal and Liebniz, but he was trying to do
+something more complex. Babbage had combined innovations that had cropped up in
+other fields, a trick of many inventors.
+
+Babbage had already used a metal drum to control how the shafts would turn. But
+then he studied the automated loom invented in 1801 by a Frenchmen named
+Joseph-Marie Jacquard, which transformed the silk-weaving industry. He invented
+a method using cards with holes punched in them to automating the creation of
+intricate patterns. Using punch cards rather than drums meant that an unlimited
+number of instructions could be input. In addition, the sequence of tasks could
+be modified, thus making it easier to devise a general purpose machine that was
+reprogrammable.
+
+\subsection{Ada's Notes}
+
+In her ``Notes'' Ada explored four concepts;
+
+\begin{itemize}
+\item The first was that of a general-purpose machine, one could not only perform a
+preset task but could be reprogrammed  to do a limitless array of tasks.
+
+\item The second was machine's operations did not need to be limited to math and
+numbers.
+
+\item Third contribution was to figure out in step-by-step detail workings of what we
+now call a computer program or algorithm.
+
+\item Last significant concept that she introduced artificial intelligence: Can
+machines think? Ada believed not. A century later this assertion would be dubbed
+``Lady Lovelace Objection'' by the computer pioneer Alan Turing.
+\end{itemize}
+
+\subsection{Summary}
+
+Babbage's most significant conceptual leap was that such machines did not have
+to be set to do only one process, but instead could be programmed and
+reprogrammed through the use of punch cards.
+
+Ada saw the beauty and significance of that enchanting notion, and she also
+described an even more exciting idea that derived from it: such machines
+could process not only numbers but anything that could be notated in symbols.
+
+US Department of Defense named its high-level object-oriented programming
+language Ada. However, she has also been ridiculed as delusional, flighty and
+only a minor contributor to the ``Notes''.
+
+The reality is that Ada's contribution was both profound and inspirational. More
+than Babbage or any other person of her era, she was able to glimpse a future in
+which machines would become partners of the human imagination.
+
+\section{The Computer}
+
+
